--- a/Project/Prism/en.lproj/Localizable.strings
+++ b/Project/Prism/en.lproj/Localizable.strings
@@ -6,18 +6,27 @@
   Copyright © 2020 John Scott. All rights reserved.
 */
 
+"com.netscape.javascript-source" = "JavaScript";
 "com.sun.java-source" = "Java source code";
 "net.daringfireball.markdown" = "Markdown";
 "org.codehaus.groovy-source" = "Groovy Source Code";
 "org.gradle.source" = "Gradle Source File";
+"org.khronos.glsl.fragment-shader" = "OpenGL Fragment Shader";
+"org.khronos.glsl.vertex-shader" = "OpenGL Vertex Shader";
 "org.kotlinlang.source" = "Kotlin Source File";
 "public.c-header" = "C header code";
+"public.c-plus-plus-header" = "C++ Header Source";
+"public.c-plus-plus-source" = "C++ Source";
+"public.c-source" = "C source code";
+"public.css" = "CSS";
+"public.html" = "HTML text";
 "public.json" = "JSON";
+"public.make-source" = "Makefile";
 "public.objective-c-source" = "Objective-C source code";
 "public.perl-script" = "Perl script";
 "public.plain-text" = "Plain text";
+"public.python-script" = "Python script";
 "public.ruby-script" = "Ruby Source";
 "public.shell-script" = "Shell script";
 "public.xml" = "XML text";
 "public.yaml" = "YAML";
-
