Added Swift, Tex and the ability dump strings for development purposes

--- a/Project/Prism/en.lproj/Localizable.strings
+++ b/Project/Prism/en.lproj/Localizable.strings
@@ -7,26 +7,28 @@
 */
 
 "com.netscape.javascript-source" = "JavaScript";
-"com.sun.java-source" = "Java source code";
+"com.sun.java-source" = "Java source";
 "net.daringfireball.markdown" = "Markdown";
-"org.codehaus.groovy-source" = "Groovy Source Code";
-"org.gradle.source" = "Gradle Source File";
-"org.khronos.glsl.fragment-shader" = "OpenGL Fragment Shader";
-"org.khronos.glsl.vertex-shader" = "OpenGL Vertex Shader";
-"org.kotlinlang.source" = "Kotlin Source File";
-"public.c-header" = "C header code";
-"public.c-plus-plus-header" = "C++ Header Source";
-"public.c-plus-plus-source" = "C++ Source";
-"public.c-source" = "C source code";
+"org.codehaus.groovy-source" = "Groovy source";
+"org.gradle.source" = "Gradle source";
+"org.khronos.glsl.fragment-shader" = "OpenGL fragment shader";
+"org.khronos.glsl.vertex-shader" = "OpenGL vertex shader";
+"org.kotlinlang.source" = "Kotlin source";
+"org.tug.tex" = "TeX document";
+"public.c-header" = "C header";
+"public.c-plus-plus-header" = "C++ header";
+"public.c-plus-plus-source" = "C++ source";
+"public.c-source" = "C source";
 "public.css" = "CSS";
 "public.html" = "HTML text";
 "public.json" = "JSON";
 "public.make-source" = "Makefile";
-"public.objective-c-source" = "Objective-C source code";
+"public.objective-c-source" = "Objective-C source";
 "public.perl-script" = "Perl script";
 "public.plain-text" = "Plain text";
 "public.python-script" = "Python script";
-"public.ruby-script" = "Ruby Source";
+"public.ruby-script" = "Ruby source";
 "public.shell-script" = "Shell script";
+"public.swift-source" = "Swift source";
 "public.xml" = "XML text";
 "public.yaml" = "YAML";
